--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,7 @@ header nav ul li button {
 
 header nav ul li a:hover,
 header nav ul li button:hover {
-  color: var (--primary-light);
+  color: var(--secondary-light);
 }
 
 header nav ul li.separator {
@@ -122,7 +122,7 @@ header nav ul li.separator {
 
 .dark-mode header nav ul li a:hover,
 .dark-mode header nav ul li button:hover {
-  color: var(--primary-dark);
+  color: var(--secondary-dark);
 }
 
 @media (max-width: 768px) {
